--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "hubii-orders",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
   "engines": {
     "node": "22"
   },
   "scripts": {
     "dev": "tsx watch --env-file=.env src/server.ts"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@faker-js/faker": "^9.5.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.5",
     "jest": "^29.7.0",
