--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "node": "22"
   },
   "scripts": {
-    "dev": "tsx watch --env-file=.env src/server.ts"
+    "dev": "tsx watch --env-file=.env src/server.ts",
+    "test": "jest",
+    "build": "tsup-node",
+    "start": "node dist/server.mjs"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
