feat: add method to calculate shipping and update create order method to use dynamic shipping rate

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 PORT=
 DATABASE_URL=
 PRODUCTS_API_URL=
-WAREHOUSE_ZIPCODE=
+WAREHOUSE_ZIPCODE=09030300
+MELHOR_ENVIO_ACCESS_TOKEN=
+MELHOR_ENVIO_API_URL=
