--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^6.4.1",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
+    "node-cache": "^5.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
