--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "tsx watch --env-file=.env src/server.ts",
     "test": "jest",
     "build": "tsup-node",
-    "start": "node dist/server.mjs"
+    "start": "node --env-file=.env dist/server.mjs"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
